--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link
     rel="icon"
     type="image/svg+xml"
-    href="./vite.svg"
+    href="/icons&images/sun.png"
   />
   <meta
     name="viewport"
